--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="main.css">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<title>About</title>
 </head>
@@ -15,7 +14,7 @@
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Features</a>
@@ -32,6 +31,5 @@
 
 <h1>About</h1>
 
-<script src="main.js"></script>
 </body>
 </html>
