--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,9 +33,8 @@
     </nav>
 
     <div class="container my-5">
-        <h1></h1>
         <h1>
-            Home Page///
+            Home Page333
         </h1>
     </div>
 
