--- a/src/html/about.html
+++ b/src/html/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	<title>About</title>
+	<title><%= title %></title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,7 +29,7 @@
 	</div>
 </nav>
 
-<h1>About1234</h1>
+<h1><%= title %></h1>
 
 </body>
 </html>
