--- a/src/html/error.html
+++ b/src/html/error.html
@@ -5,9 +5,10 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Error Page</title>
+	<title><%= title %></title>
 </head>
 <body>
-	<h1>Error</h1>
+	<h1><%= title %></h1>
+	<a href="/">Home</a>
 </body>
 </html>
