--- a/src/html/error.html
+++ b/src/html/error.html
@@ -8,7 +8,8 @@
 	<title><%= title %></title>
 </head>
 <body>
+	<navbar></navbar>
+
 	<h1><%= title %></h1>
-	<a href="/">Home</a>
 </body>
 </html>
